welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not enough arguments for method growFlowers: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	    growFlowers();
                       ^FlowerPot:9: error: not found: value color
setCouleurBrosse(color.yellow)
                 ^FlowerPot:11: error: not found: value color
color;
^