welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def marquer()
{
	baisseBrosse();
	leveBrosse();
}
def growFlowers (c:Color)
{
setCouleurBrosse(color.yellow)
marquer();
color;
avance();
marquer();
recule();
gauche();
avance();
marquer();
avance();
recule(2);
marquer();
avance();
gauche();
avance();
marquer();
}
